// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Roles /> should render correctly 1`] = `
<section
  class="ins-l-content"
  id="tab-roles"
>
   
  <div>
    <div
      class="pf-v5-c-toolbar  ins-c-primary-toolbar"
      data-ouia-component-id="PrimaryToolbar"
      data-ouia-component-type="PF5/Toolbar"
      data-ouia-safe="true"
      id="ins-primary-data-toolbar"
    >
      <div
        class="pf-v5-c-toolbar__content"
      >
        <div
          class="pf-v5-c-toolbar__content-section"
        >
          <div
            class="pf-v5-c-toolbar__group pf-m-filter-group ins-c-primary-toolbar__group-filter pf-m-spacer-md pf-m-space-items-lg"
          >
            <div
              class="pf-v5-c-toolbar__item"
            >
              <button
                aria-expanded="false"
                class="pf-v5-c-menu-toggle"
                data-ouia-component-id="OUIA-Generated-MenuToggle-1"
                data-ouia-component-type="PF5/MenuToggle"
                data-ouia-safe="true"
                type="button"
              >
                <span
                  class="pf-v5-c-menu-toggle__text"
                >
                  <label
                    class="pf-v5-c-check pf-m-standalone"
                  >
                    <input
                      aria-invalid="false"
                      aria-label="Select all"
                      class="pf-v5-c-check__input"
                      data-ouia-component-id="BulkSelectCheckbox"
                      data-ouia-component-type="PF5/MenuToggleCheckbox"
                      data-ouia-safe="true"
                      name="roles-toggle-checkbox"
                      type="checkbox"
                    />
                  </label>
                </span>
                <span
                  class="pf-v5-c-menu-toggle__controls"
                >
                  <span
                    class="pf-v5-c-menu-toggle__toggle-icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v5-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      viewBox="0 0 320 512"
                      width="1em"
                    >
                      <path
                        d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
            </div>
            <div
              class="pf-v5-c-toolbar__item ins-c-primary-toolbar__filter"
            >
              <div
                class="pf-v5-l-split ins-c-conditional-filter"
              >
                <div
                  class="pf-v5-l-split__item pf-m-fill"
                  data-ouia-component-id="ConditionalFilter"
                >
                  <span
                    class="pf-v5-c-form-control pf-m-icon ins-c-conditional-filter"
                  >
                    <input
                      aria-invalid="false"
                      aria-label="text input"
                      data-ouia-component-id="ConditionalFilter"
                      data-ouia-component-type="PF5/TextInput"
                      data-ouia-safe="true"
                      id="filter-by-string"
                      placeholder="Filter by {key}"
                      type="text"
                      value=""
                      widget-type="InsightsInput"
                    />
                    <span
                      class="pf-v5-c-form-control__utilities"
                    >
                      <span
                        class="pf-v5-c-form-control__icon"
                      >
                        <span
                          class="pf-v5-c-icon pf-m-md ins-c-search-icon"
                        >
                          <span
                            class="pf-v5-c-icon__content"
                          >
                            <svg
                              aria-hidden="true"
                              class="pf-v5-svg"
                              fill="currentColor"
                              height="1em"
                              role="img"
                              viewBox="0 0 512 512"
                              width="1em"
                            >
                              <path
                                d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                              />
                            </svg>
                          </span>
                        </span>
                      </span>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="pf-v5-c-toolbar__item ins-c-primary-toolbar__first-action pf-m-spacer-sm"
          >
            <span>
              <a
                class="rbac-m-hide-on-sm"
                href="/iam/user-access/roles/add-role"
              >
                <button
                  aria-disabled="false"
                  aria-label="Create role"
                  class="pf-v5-c-button pf-m-primary"
                  data-ouia-component-id="create-role-button"
                  data-ouia-component-type="PF5/Button"
                  data-ouia-safe="true"
                  type="button"
                >
                  Create role
                </button>
              </a>
            </span>
          </div>
          <div
            class="pf-v5-c-toolbar__item  ins-c-primary-toolbar__actions pf-m-spacer-sm"
          >
            <button
              aria-expanded="false"
              aria-label="kebab dropdown toggle"
              class="pf-v5-c-menu-toggle pf-m-plain"
              data-ouia-component-id="OUIA-Generated-MenuToggle-plain-1"
              data-ouia-component-type="PF5/MenuToggle"
              data-ouia-safe="true"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="pf-v5-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 192 512"
                width="1em"
              >
                <path
                  d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
                />
              </svg>
            </button>
          </div>
          <div
            class="pf-v5-c-toolbar__item ins-c-primary-toolbar__pagination"
          >
            <div
              class="pf-v5-c-pagination pf-m-compact"
              data-ouia-component-id="CompactPagination"
              data-ouia-component-type="PF5/Pagination"
              data-ouia-safe="true"
              id="options-menu-top-pagination"
              style="--pf-v5-c-pagination__nav-page-select--c-form-control--width-chars: 2;"
            >
              <div
                class="pf-v5-c-pagination__total-items"
              >
                <b>
                  0
                   - 
                  0
                </b>
                 
                of
                 
                <b>
                  0
                </b>
                 
              </div>
              <button
                aria-expanded="false"
                aria-haspopup="listbox"
                class="pf-v5-c-menu-toggle pf-m-plain pf-m-text"
                data-ouia-component-id="OUIA-Generated-MenuToggle-plainText-1"
                data-ouia-component-type="PF5/MenuToggle"
                data-ouia-safe="true"
                id="options-menu-top-toggle"
                type="button"
              >
                <span
                  class="pf-v5-c-menu-toggle__text"
                >
                  <b>
                    0
                     - 
                    0
                  </b>
                   
                  of
                   
                  <b>
                    0
                  </b>
                   
                </span>
                <span
                  class="pf-v5-c-menu-toggle__controls"
                >
                  <span
                    class="pf-v5-c-menu-toggle__toggle-icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v5-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      viewBox="0 0 320 512"
                      width="1em"
                    >
                      <path
                        d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
              <nav
                aria-label="Pagination"
                class="pf-v5-c-pagination__nav"
              >
                <div
                  class="pf-v5-c-pagination__nav-control"
                >
                  <button
                    aria-disabled="true"
                    aria-label="Go to previous page"
                    class="pf-v5-c-button pf-m-plain pf-m-disabled"
                    data-action="previous"
                    data-ouia-component-id="OUIA-Generated-Button-plain-1"
                    data-ouia-component-type="PF5/Button"
                    data-ouia-safe="true"
                    disabled=""
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v5-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      viewBox="0 0 256 512"
                      width="1em"
                    >
                      <path
                        d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
                      />
                    </svg>
                  </button>
                </div>
                <div
                  class="pf-v5-c-pagination__nav-control"
                >
                  <button
                    aria-disabled="true"
                    aria-label="Go to next page"
                    class="pf-v5-c-button pf-m-plain pf-m-disabled"
                    data-action="next"
                    data-ouia-component-id="OUIA-Generated-Button-plain-2"
                    data-ouia-component-type="PF5/Button"
                    data-ouia-safe="true"
                    disabled=""
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v5-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      viewBox="0 0 256 512"
                      width="1em"
                    >
                      <path
                        d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                      />
                    </svg>
                  </button>
                </div>
              </nav>
            </div>
          </div>
        </div>
      </div>
      <div
        class="pf-v5-c-toolbar__content pf-m-hidden"
        hidden=""
      >
        <div
          class="pf-v5-c-toolbar__group"
        />
      </div>
    </div>
    <table
      aria-label="roles table"
      class="pf-v5-c-table pf-m-grid-md"
      data-ouia-component-id="roles-table"
      data-ouia-component-type="PF5/Table"
      data-ouia-safe="true"
      role="grid"
    >
      <thead
        class="pf-v5-c-table__thead"
      >
        <tr
          class="pf-v5-c-table__tr"
          data-ouia-component-id="OUIA-Generated-TableRow-1"
          data-ouia-component-type="PF5/TableRow"
          data-ouia-safe="true"
        >
          <th
            class="pf-v5-c-table__th"
            data-key="0"
            data-label=""
            tabindex="-1"
          />
          <th
            aria-sort="ascending"
            class="pf-v5-c-table__th pf-m-width-20 pf-v5-c-table__sort pf-m-selected"
            data-key="1"
            data-label="Name"
            scope="col"
            tabindex="-1"
          >
            <button
              class="pf-v5-c-table__button"
              type="button"
            >
              <div
                class="pf-v5-c-table__button-content"
              >
                <span
                  class="pf-v5-c-table__text"
                >
                  Name
                </span>
                <span
                  class="pf-v5-c-table__sort-indicator"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-v5-svg"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    viewBox="0 0 256 512"
                    width="1em"
                  >
                    <path
                      d="M88 166.059V468c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12V166.059h46.059c21.382 0 32.09-25.851 16.971-40.971l-86.059-86.059c-9.373-9.373-24.569-9.373-33.941 0l-86.059 86.059c-15.119 15.119-4.411 40.971 16.971 40.971H88z"
                    />
                  </svg>
                </span>
              </div>
            </button>
          </th>
          <th
            class="pf-v5-c-table__th"
            data-key="2"
            data-label="Description"
            scope="col"
            tabindex="-1"
          >
            Description
          </th>
          <th
            class="pf-v5-c-table__th pf-m-nowrap"
            data-key="3"
            data-label="Groups"
            scope="col"
            tabindex="-1"
          >
            Groups
          </th>
          <th
            class="pf-v5-c-table__th pf-m-nowrap"
            data-key="4"
            data-label="Permissions"
            scope="col"
            tabindex="-1"
          >
            Permissions
          </th>
          <th
            class="pf-v5-c-table__th pf-m-nowrap pf-v5-c-table__sort"
            data-key="5"
            data-label="Last modified"
            scope="col"
            tabindex="-1"
          >
            <button
              class="pf-v5-c-table__button"
              type="button"
            >
              <div
                class="pf-v5-c-table__button-content"
              >
                <span
                  class="pf-v5-c-table__text"
                >
                  Last modified
                </span>
                <span
                  class="pf-v5-c-table__sort-indicator"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-v5-svg"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    viewBox="0 0 256 512"
                    width="1em"
                  >
                    <path
                      d="M214.059 377.941H168V134.059h46.059c21.382 0 32.09-25.851 16.971-40.971L144.971 7.029c-9.373-9.373-24.568-9.373-33.941 0L24.971 93.088c-15.119 15.119-4.411 40.971 16.971 40.971H88v243.882H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.568 9.373 33.941 0l86.059-86.059c15.12-15.119 4.412-40.971-16.97-40.971z"
                    />
                  </svg>
                </span>
              </div>
            </button>
          </th>
          <td
            class="pf-v5-c-table__th"
            data-key="6"
            data-label=""
            tabindex="-1"
          />
        </tr>
      </thead>
      <tbody
        class="pf-v5-c-table__tbody"
        role="rowgroup"
      >
        <tr
          class="pf-v5-c-table__tr"
          data-ouia-component-id="OUIA-Generated-TableRow-2"
          data-ouia-component-type="PF5/TableRow"
          data-ouia-safe="true"
        >
          <td
            class="pf-v5-c-table__td pf-v5-c-table__check"
            data-key="0"
            tabindex="-1"
          >
            <label>
              <input
                aria-label="Select row 0"
                name="checkrow0"
                type="checkbox"
              />
            </label>
          </td>
          <td
            class="pf-v5-c-table__td"
            data-key="1"
            data-label="Name"
            tabindex="-1"
          >
            <span>
              <a
                href="/iam/user-access/roles/detail/test"
              >
                Test name
              </a>
            </span>
          </td>
          <td
            class="pf-v5-c-table__td"
            data-key="2"
            data-label="Description"
            tabindex="-1"
          >
            test
          </td>
          <td
            class="pf-v5-c-table__td pf-v5-c-table__compound-expansion-toggle"
            data-key="3"
            data-label="Groups"
            tabindex="-1"
          >
            <button
              aria-expanded="false"
              class="pf-v5-c-table__button"
              id="expandable-toggle-0-3"
              type="button"
            >
              <span
                class="pf-v5-c-table__text"
              >
                1
              </span>
            </button>
          </td>
          <td
            class="pf-v5-c-table__td pf-v5-c-table__compound-expansion-toggle"
            data-key="4"
            data-label="Permissions"
            tabindex="-1"
          >
            <button
              aria-expanded="false"
              class="pf-v5-c-table__button"
              id="expandable-toggle-0-4"
              type="button"
            >
              <span
                class="pf-v5-c-table__text"
              >
                1
              </span>
            </button>
          </td>
          <td
            class="pf-v5-c-table__td"
            data-key="5"
            data-label="Last modified"
            tabindex="-1"
          >
            01 Jan 1970
          </td>
          <td
            class="pf-v5-c-table__td pf-v5-c-table__action"
            data-key="6"
            style="padding-right: 0px;"
            tabindex="-1"
          >
            <button
              aria-expanded="false"
              aria-label="Kebab toggle"
              class="pf-v5-c-menu-toggle pf-m-plain"
              data-ouia-component-id="OUIA-Generated-MenuToggle-plain-5"
              data-ouia-component-type="PF5/MenuToggle"
              data-ouia-safe="true"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="pf-v5-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 192 512"
                width="1em"
              >
                <path
                  d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
                />
              </svg>
            </button>
          </td>
        </tr>
        <tr
          class="pf-v5-c-table__tr pf-v5-c-table__expandable-row"
          data-ouia-component-id="OUIA-Generated-TableRow-3"
          data-ouia-component-type="PF5/TableRow"
          data-ouia-safe="true"
          hidden=""
        >
          <td
            class="pf-v5-c-table__td pf-v5-c-table__check pf-m-no-padding"
            colspan="7"
            data-key="0"
            tabindex="-1"
          >
            <table
              aria-label="Compound groups table"
              class="pf-v5-c-table pf-m-grid-md pf-m-compact"
              data-ouia-component-id="role-in-groups-nested-table"
              data-ouia-component-type="PF5/Table"
              data-ouia-safe="true"
              role="grid"
            >
              <thead
                class="pf-v5-c-table__thead"
              >
                <tr
                  class="pf-v5-c-table__tr"
                  data-ouia-component-id="OUIA-Generated-TableRow-4"
                  data-ouia-component-type="PF5/TableRow"
                  data-ouia-safe="true"
                >
                  <th
                    class="pf-v5-c-table__th"
                    data-key="0"
                    data-label="Group name"
                    scope="col"
                    tabindex="-1"
                  >
                    Group name
                  </th>
                  <th
                    class="pf-v5-c-table__th"
                    data-key="1"
                    data-label="Description"
                    scope="col"
                    tabindex="-1"
                  >
                    Description
                  </th>
                  <th
                    class="pf-v5-c-table__th"
                    data-key="2"
                    data-label=" "
                    scope="col"
                    tabindex="-1"
                  >
                     
                  </th>
                </tr>
              </thead>
              <tbody
                class="pf-v5-c-table__tbody"
                role="rowgroup"
              >
                <tr
                  class="pf-v5-c-table__tr"
                  data-ouia-component-id="OUIA-Generated-TableRow-5"
                  data-ouia-component-type="PF5/TableRow"
                  data-ouia-safe="true"
                >
                  <td
                    class="pf-v5-c-table__td"
                    data-key="0"
                    data-label="Group name"
                    tabindex="-1"
                  >
                    <span>
                      <a
                        href="/iam/user-access/groups/detail/abc"
                      >
                        Test Redirect
                      </a>
                    </span>
                  </td>
                  <td
                    class="pf-v5-c-table__td"
                    data-key="1"
                    data-label="Description"
                    tabindex="-1"
                  />
                  <td
                    class="pf-v5-c-table__td pf-v5-u-text-align-right"
                    data-key="2"
                    data-label=" "
                    tabindex="-1"
                  >
                    <span>
                      <a
                        href="/iam/user-access/roles/test/add-group-roles/abc"
                      >
                        Add role to this group
                      </a>
                    </span>
                  </td>
                </tr>
              </tbody>
            </table>
          </td>
          <td
            class="pf-v5-c-table__td pf-v5-c-table__action"
            data-key="6"
            style="padding-right: 0px;"
            tabindex="-1"
          />
        </tr>
        <tr
          class="pf-v5-c-table__tr pf-v5-c-table__expandable-row"
          data-ouia-component-id="OUIA-Generated-TableRow-6"
          data-ouia-component-type="PF5/TableRow"
          data-ouia-safe="true"
          hidden=""
        >
          <td
            class="pf-v5-c-table__td pf-v5-c-table__check pf-m-no-padding"
            colspan="7"
            data-key="0"
            tabindex="-1"
          >
            <table
              aria-label="Compound permissions table"
              class="pf-v5-c-table pf-m-grid-md pf-m-compact"
              data-ouia-component-id="permissions-in-role-nested-table"
              data-ouia-component-type="PF5/Table"
              data-ouia-safe="true"
              role="grid"
            >
              <thead
                class="pf-v5-c-table__thead"
              >
                <tr
                  class="pf-v5-c-table__tr"
                  data-ouia-component-id="OUIA-Generated-TableRow-7"
                  data-ouia-component-type="PF5/TableRow"
                  data-ouia-safe="true"
                >
                  <th
                    class="pf-v5-c-table__th"
                    data-key="0"
                    data-label="Application"
                    scope="col"
                    tabindex="-1"
                  >
                    Application
                  </th>
                  <th
                    class="pf-v5-c-table__th"
                    data-key="1"
                    data-label="Resource type"
                    scope="col"
                    tabindex="-1"
                  >
                    Resource type
                  </th>
                  <th
                    class="pf-v5-c-table__th"
                    data-key="2"
                    data-label="Operation"
                    scope="col"
                    tabindex="-1"
                  >
                    Operation
                  </th>
                  <th
                    class="pf-v5-c-table__th"
                    data-key="3"
                    data-label="Last modified"
                    scope="col"
                    tabindex="-1"
                  >
                    Last modified
                  </th>
                </tr>
              </thead>
              <tbody
                class="pf-v5-c-table__tbody"
                role="rowgroup"
              >
                <tr
                  class="pf-v5-c-table__tr"
                  data-ouia-component-id="OUIA-Generated-TableRow-8"
                  data-ouia-component-type="PF5/TableRow"
                  data-ouia-safe="true"
                >
                  <td
                    class="pf-v5-c-table__td"
                    data-key="0"
                    data-label="Application"
                    tabindex="-1"
                  >
                    advisor
                  </td>
                  <td
                    class="pf-v5-c-table__td"
                    data-key="1"
                    data-label="Resource type"
                    tabindex="-1"
                  >
                    *
                  </td>
                  <td
                    class="pf-v5-c-table__td"
                    data-key="2"
                    data-label="Operation"
                    tabindex="-1"
                  >
                    *
                  </td>
                  <td
                    class="pf-v5-c-table__td"
                    data-key="3"
                    data-label="Last modified"
                    tabindex="-1"
                  >
                    01 Jan 1970
                  </td>
                </tr>
              </tbody>
            </table>
          </td>
          <td
            class="pf-v5-c-table__td pf-v5-c-table__action"
            data-key="6"
            style="padding-right: 0px;"
            tabindex="-1"
          />
        </tr>
      </tbody>
    </table>
    <div
      class="pf-v5-c-toolbar ins-c-table__toolbar"
      data-ouia-component-id="OUIA-Generated-RHI/TableToolbar-true-1"
      data-ouia-component-type="RHI/TableToolbar"
      data-ouia-safe="true"
      id="pf-random-id-0"
    >
      <div
        class="pf-v5-c-pagination pf-m-bottom"
        data-ouia-component-id="OUIA-Generated-Pagination-bottom-1"
        data-ouia-component-type="PF5/Pagination"
        data-ouia-safe="true"
        id="options-menu-bottom-pagination"
        style="--pf-v5-c-pagination__nav-page-select--c-form-control--width-chars: 2;"
      >
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          class="pf-v5-c-menu-toggle pf-m-plain pf-m-text"
          data-ouia-component-id="OUIA-Generated-MenuToggle-plainText-2"
          data-ouia-component-type="PF5/MenuToggle"
          data-ouia-safe="true"
          id="options-menu-bottom-toggle"
          type="button"
        >
          <span
            class="pf-v5-c-menu-toggle__text"
          >
            <b>
              0
               - 
              0
            </b>
             
            of
             
            <b>
              0
            </b>
             
          </span>
          <span
            class="pf-v5-c-menu-toggle__controls"
          >
            <span
              class="pf-v5-c-menu-toggle__toggle-icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v5-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 320 512"
                width="1em"
              >
                <path
                  d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                />
              </svg>
            </span>
          </span>
        </button>
        <nav
          aria-label="Pagination"
          class="pf-v5-c-pagination__nav"
        >
          <div
            class="pf-v5-c-pagination__nav-control pf-m-first"
          >
            <button
              aria-disabled="true"
              aria-label="Go to first page"
              class="pf-v5-c-button pf-m-plain pf-m-disabled"
              data-action="first"
              data-ouia-component-id="OUIA-Generated-Button-plain-3"
              data-ouia-component-type="PF5/Button"
              data-ouia-safe="true"
              disabled=""
              type="button"
            >
              <svg
                aria-hidden="true"
                class="pf-v5-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 448 512"
                width="1em"
              >
                <path
                  d="M223.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L319.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L393.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34zm-192 34l136 136c9.4 9.4 24.6 9.4 33.9 0l22.6-22.6c9.4-9.4 9.4-24.6 0-33.9L127.9 256l96.4-96.4c9.4-9.4 9.4-24.6 0-33.9L201.7 103c-9.4-9.4-24.6-9.4-33.9 0l-136 136c-9.5 9.4-9.5 24.6-.1 34z"
                />
              </svg>
            </button>
          </div>
          <div
            class="pf-v5-c-pagination__nav-control"
          >
            <button
              aria-disabled="true"
              aria-label="Go to previous page"
              class="pf-v5-c-button pf-m-plain pf-m-disabled"
              data-action="previous"
              data-ouia-component-id="OUIA-Generated-Button-plain-4"
              data-ouia-component-type="PF5/Button"
              data-ouia-safe="true"
              disabled=""
              type="button"
            >
              <svg
                aria-hidden="true"
                class="pf-v5-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 256 512"
                width="1em"
              >
                <path
                  d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
                />
              </svg>
            </button>
          </div>
          <div
            class="pf-v5-c-pagination__nav-page-select"
          >
            <span
              class="pf-v5-c-form-control pf-m-disabled"
            >
              <input
                aria-invalid="false"
                aria-label="Current page"
                data-ouia-component-id="OUIA-Generated-TextInputBase-2"
                data-ouia-component-type="PF5/TextInput"
                data-ouia-safe="true"
                disabled=""
                max="0"
                min="1"
                type="number"
                value="0"
              />
            </span>
            <span
              aria-hidden="true"
            >
              of
               
              0
            </span>
          </div>
          <div
            class="pf-v5-c-pagination__nav-control"
          >
            <button
              aria-disabled="true"
              aria-label="Go to next page"
              class="pf-v5-c-button pf-m-plain pf-m-disabled"
              data-action="next"
              data-ouia-component-id="OUIA-Generated-Button-plain-5"
              data-ouia-component-type="PF5/Button"
              data-ouia-safe="true"
              disabled=""
              type="button"
            >
              <svg
                aria-hidden="true"
                class="pf-v5-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 256 512"
                width="1em"
              >
                <path
                  d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                />
              </svg>
            </button>
          </div>
          <div
            class="pf-v5-c-pagination__nav-control pf-m-last"
          >
            <button
              aria-disabled="true"
              aria-label="Go to last page"
              class="pf-v5-c-button pf-m-plain pf-m-disabled"
              data-action="last"
              data-ouia-component-id="OUIA-Generated-Button-plain-6"
              data-ouia-component-type="PF5/Button"
              data-ouia-safe="true"
              disabled=""
              type="button"
            >
              <svg
                aria-hidden="true"
                class="pf-v5-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 448 512"
                width="1em"
              >
                <path
                  d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34zm192-34l-136-136c-9.4-9.4-24.6-9.4-33.9 0l-22.6 22.6c-9.4 9.4-9.4 24.6 0 33.9l96.4 96.4-96.4 96.4c-9.4 9.4-9.4 24.6 0 33.9l22.6 22.6c9.4 9.4 24.6 9.4 33.9 0l136-136c9.4-9.2 9.4-24.4 0-33.8z"
                />
              </svg>
            </button>
          </div>
        </nav>
      </div>
      <div
        class="pf-v5-c-toolbar__content pf-m-hidden"
        hidden=""
      >
        <div
          class="pf-v5-c-toolbar__group"
        />
      </div>
    </div>
  </div>
   
</section>
`;

exports[`<Roles /> should render correctly expanded 1`] = `
<table
  aria-label="roles table"
  class="pf-v5-c-table pf-m-grid-md"
  data-ouia-component-id="roles-table"
  data-ouia-component-type="PF5/Table"
  data-ouia-safe="true"
  role="grid"
>
  <thead
    class="pf-v5-c-table__thead"
  >
    <tr
      class="pf-v5-c-table__tr"
      data-ouia-component-id="OUIA-Generated-TableRow-23"
      data-ouia-component-type="PF5/TableRow"
      data-ouia-safe="true"
    >
      <th
        class="pf-v5-c-table__th"
        data-key="0"
        data-label=""
        tabindex="-1"
      />
      <th
        aria-sort="ascending"
        class="pf-v5-c-table__th pf-m-width-20 pf-v5-c-table__sort pf-m-selected"
        data-key="1"
        data-label="Name"
        scope="col"
        tabindex="-1"
      >
        <button
          class="pf-v5-c-table__button"
          type="button"
        >
          <div
            class="pf-v5-c-table__button-content"
          >
            <span
              class="pf-v5-c-table__text"
            >
              Name
            </span>
            <span
              class="pf-v5-c-table__sort-indicator"
            >
              <svg
                aria-hidden="true"
                class="pf-v5-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 256 512"
                width="1em"
              >
                <path
                  d="M88 166.059V468c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12V166.059h46.059c21.382 0 32.09-25.851 16.971-40.971l-86.059-86.059c-9.373-9.373-24.569-9.373-33.941 0l-86.059 86.059c-15.119 15.119-4.411 40.971 16.971 40.971H88z"
                />
              </svg>
            </span>
          </div>
        </button>
      </th>
      <th
        class="pf-v5-c-table__th"
        data-key="2"
        data-label="Description"
        scope="col"
        tabindex="-1"
      >
        Description
      </th>
      <th
        class="pf-v5-c-table__th pf-m-nowrap"
        data-key="3"
        data-label="Groups"
        scope="col"
        tabindex="-1"
      >
        Groups
      </th>
      <th
        class="pf-v5-c-table__th pf-m-nowrap"
        data-key="4"
        data-label="Permissions"
        scope="col"
        tabindex="-1"
      >
        Permissions
      </th>
      <th
        class="pf-v5-c-table__th pf-m-nowrap pf-v5-c-table__sort"
        data-key="5"
        data-label="Last modified"
        scope="col"
        tabindex="-1"
      >
        <button
          class="pf-v5-c-table__button"
          type="button"
        >
          <div
            class="pf-v5-c-table__button-content"
          >
            <span
              class="pf-v5-c-table__text"
            >
              Last modified
            </span>
            <span
              class="pf-v5-c-table__sort-indicator"
            >
              <svg
                aria-hidden="true"
                class="pf-v5-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 256 512"
                width="1em"
              >
                <path
                  d="M214.059 377.941H168V134.059h46.059c21.382 0 32.09-25.851 16.971-40.971L144.971 7.029c-9.373-9.373-24.568-9.373-33.941 0L24.971 93.088c-15.119 15.119-4.411 40.971 16.971 40.971H88v243.882H41.941c-21.382 0-32.09 25.851-16.971 40.971l86.059 86.059c9.373 9.373 24.568 9.373 33.941 0l86.059-86.059c15.12-15.119 4.412-40.971-16.97-40.971z"
                />
              </svg>
            </span>
          </div>
        </button>
      </th>
      <td
        class="pf-v5-c-table__th"
        data-key="6"
        data-label=""
        tabindex="-1"
      />
    </tr>
  </thead>
  <tbody
    class="pf-v5-c-table__tbody pf-m-expanded"
    role="rowgroup"
  >
    <tr
      class="pf-v5-c-table__tr"
      data-ouia-component-id="OUIA-Generated-TableRow-24"
      data-ouia-component-type="PF5/TableRow"
      data-ouia-safe="true"
    >
      <td
        class="pf-v5-c-table__td pf-v5-c-table__check"
        data-key="0"
        tabindex="-1"
      >
        <label>
          <input
            aria-label="Select row 0"
            name="checkrow0"
            type="checkbox"
          />
        </label>
      </td>
      <td
        class="pf-v5-c-table__td"
        data-key="1"
        data-label="Name"
        tabindex="-1"
      >
        <span>
          <a
            href="/iam/user-access/roles/detail/test"
          >
            Test name
          </a>
        </span>
      </td>
      <td
        class="pf-v5-c-table__td"
        data-key="2"
        data-label="Description"
        tabindex="-1"
      >
        test
      </td>
      <td
        class="pf-v5-c-table__td pf-v5-c-table__compound-expansion-toggle pf-m-expanded"
        data-key="3"
        data-label="Groups"
        tabindex="-1"
      >
        <button
          aria-expanded="true"
          class="pf-v5-c-table__button"
          id="expandable-toggle-0-3"
          type="button"
        >
          <span
            class="pf-v5-c-table__text"
          >
            1
          </span>
        </button>
      </td>
      <td
        class="pf-v5-c-table__td pf-v5-c-table__compound-expansion-toggle"
        data-key="4"
        data-label="Permissions"
        tabindex="-1"
      >
        <button
          aria-expanded="false"
          class="pf-v5-c-table__button"
          id="expandable-toggle-0-4"
          type="button"
        >
          <span
            class="pf-v5-c-table__text"
          >
            1
          </span>
        </button>
      </td>
      <td
        class="pf-v5-c-table__td"
        data-key="5"
        data-label="Last modified"
        tabindex="-1"
      >
        01 Jan 1970
      </td>
      <td
        class="pf-v5-c-table__td pf-v5-c-table__action"
        data-key="6"
        style="padding-right: 0px;"
        tabindex="-1"
      >
        <button
          aria-expanded="false"
          aria-label="Kebab toggle"
          class="pf-v5-c-menu-toggle pf-m-plain"
          data-ouia-component-id="OUIA-Generated-MenuToggle-plain-14"
          data-ouia-component-type="PF5/MenuToggle"
          data-ouia-safe="true"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="pf-v5-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0 192 512"
            width="1em"
          >
            <path
              d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
            />
          </svg>
        </button>
      </td>
    </tr>
    <tr
      class="pf-v5-c-table__tr pf-v5-c-table__expandable-row pf-m-expanded"
      data-ouia-component-id="OUIA-Generated-TableRow-25"
      data-ouia-component-type="PF5/TableRow"
      data-ouia-safe="true"
    >
      <td
        class="pf-v5-c-table__td pf-v5-c-table__check pf-m-no-padding"
        colspan="7"
        data-key="0"
        tabindex="-1"
      >
        <table
          aria-label="Compound groups table"
          class="pf-v5-c-table pf-m-grid-md pf-m-compact"
          data-ouia-component-id="role-in-groups-nested-table"
          data-ouia-component-type="PF5/Table"
          data-ouia-safe="true"
          role="grid"
        >
          <thead
            class="pf-v5-c-table__thead"
          >
            <tr
              class="pf-v5-c-table__tr"
              data-ouia-component-id="OUIA-Generated-TableRow-26"
              data-ouia-component-type="PF5/TableRow"
              data-ouia-safe="true"
            >
              <th
                class="pf-v5-c-table__th"
                data-key="0"
                data-label="Group name"
                scope="col"
                tabindex="-1"
              >
                Group name
              </th>
              <th
                class="pf-v5-c-table__th"
                data-key="1"
                data-label="Description"
                scope="col"
                tabindex="-1"
              >
                Description
              </th>
              <th
                class="pf-v5-c-table__th"
                data-key="2"
                data-label=" "
                scope="col"
                tabindex="-1"
              >
                 
              </th>
            </tr>
          </thead>
          <tbody
            class="pf-v5-c-table__tbody"
            role="rowgroup"
          >
            <tr
              class="pf-v5-c-table__tr"
              data-ouia-component-id="OUIA-Generated-TableRow-27"
              data-ouia-component-type="PF5/TableRow"
              data-ouia-safe="true"
            >
              <td
                class="pf-v5-c-table__td"
                data-key="0"
                data-label="Group name"
                tabindex="-1"
              >
                <span>
                  <a
                    href="/iam/user-access/groups/detail/abc"
                  >
                    Test Redirect
                  </a>
                </span>
              </td>
              <td
                class="pf-v5-c-table__td"
                data-key="1"
                data-label="Description"
                tabindex="-1"
              />
              <td
                class="pf-v5-c-table__td pf-v5-u-text-align-right"
                data-key="2"
                data-label=" "
                tabindex="-1"
              >
                <span>
                  <a
                    href="/iam/user-access/roles/test/add-group-roles/abc"
                  >
                    Add role to this group
                  </a>
                </span>
              </td>
            </tr>
          </tbody>
        </table>
      </td>
      <td
        class="pf-v5-c-table__td pf-v5-c-table__action"
        data-key="6"
        style="padding-right: 0px;"
        tabindex="-1"
      />
    </tr>
    <tr
      class="pf-v5-c-table__tr pf-v5-c-table__expandable-row"
      data-ouia-component-id="OUIA-Generated-TableRow-28"
      data-ouia-component-type="PF5/TableRow"
      data-ouia-safe="true"
      hidden=""
    >
      <td
        class="pf-v5-c-table__td pf-v5-c-table__check pf-m-no-padding"
        colspan="7"
        data-key="0"
        tabindex="-1"
      >
        <table
          aria-label="Compound permissions table"
          class="pf-v5-c-table pf-m-grid-md pf-m-compact"
          data-ouia-component-id="permissions-in-role-nested-table"
          data-ouia-component-type="PF5/Table"
          data-ouia-safe="true"
          role="grid"
        >
          <thead
            class="pf-v5-c-table__thead"
          >
            <tr
              class="pf-v5-c-table__tr"
              data-ouia-component-id="OUIA-Generated-TableRow-29"
              data-ouia-component-type="PF5/TableRow"
              data-ouia-safe="true"
            >
              <th
                class="pf-v5-c-table__th"
                data-key="0"
                data-label="Application"
                scope="col"
                tabindex="-1"
              >
                Application
              </th>
              <th
                class="pf-v5-c-table__th"
                data-key="1"
                data-label="Resource type"
                scope="col"
                tabindex="-1"
              >
                Resource type
              </th>
              <th
                class="pf-v5-c-table__th"
                data-key="2"
                data-label="Operation"
                scope="col"
                tabindex="-1"
              >
                Operation
              </th>
              <th
                class="pf-v5-c-table__th"
                data-key="3"
                data-label="Last modified"
                scope="col"
                tabindex="-1"
              >
                Last modified
              </th>
            </tr>
          </thead>
          <tbody
            class="pf-v5-c-table__tbody"
            role="rowgroup"
          >
            <tr
              class="pf-v5-c-table__tr"
              data-ouia-component-id="OUIA-Generated-TableRow-30"
              data-ouia-component-type="PF5/TableRow"
              data-ouia-safe="true"
            >
              <td
                class="pf-v5-c-table__td"
                data-key="0"
                data-label="Application"
                tabindex="-1"
              >
                advisor
              </td>
              <td
                class="pf-v5-c-table__td"
                data-key="1"
                data-label="Resource type"
                tabindex="-1"
              >
                *
              </td>
              <td
                class="pf-v5-c-table__td"
                data-key="2"
                data-label="Operation"
                tabindex="-1"
              >
                *
              </td>
              <td
                class="pf-v5-c-table__td"
                data-key="3"
                data-label="Last modified"
                tabindex="-1"
              >
                01 Jan 1970
              </td>
            </tr>
          </tbody>
        </table>
      </td>
      <td
        class="pf-v5-c-table__td pf-v5-c-table__action"
        data-key="6"
        style="padding-right: 0px;"
        tabindex="-1"
      />
    </tr>
  </tbody>
</table>
`;

exports[`<Roles /> should render correctly in loading state 1`] = `
<table
  aria-label="Loading"
  class="pf-v5-c-table pf-m-grid-md"
  data-ouia-component-id="SkeletonTable"
  data-ouia-component-type="PF5/Table"
  data-ouia-safe="true"
  role="grid"
  rows="20"
>
  <thead
    class="pf-v5-c-table__thead"
    data-ouia-component-id="SkeletonTable-thead"
  >
    <tr
      class="pf-v5-c-table__tr"
      data-ouia-component-id="SkeletonTable-tr-head"
      data-ouia-component-type="PF5/TableRow"
      data-ouia-safe="true"
    >
      <th
        class="pf-v5-c-table__th"
        data-ouia-component-id="SkeletonTable-th-0"
        scope="col"
        tabindex="-1"
      >
        Name
      </th>
      <th
        class="pf-v5-c-table__th"
        data-ouia-component-id="SkeletonTable-th-1"
        scope="col"
        tabindex="-1"
      >
        Description
      </th>
      <th
        class="pf-v5-c-table__th"
        data-ouia-component-id="SkeletonTable-th-2"
        scope="col"
        tabindex="-1"
      >
        Groups
      </th>
      <th
        class="pf-v5-c-table__th"
        data-ouia-component-id="SkeletonTable-th-3"
        scope="col"
        tabindex="-1"
      >
        Permissions
      </th>
      <th
        class="pf-v5-c-table__th"
        data-ouia-component-id="SkeletonTable-th-4"
        scope="col"
        tabindex="-1"
      >
        Last modified
      </th>
    </tr>
  </thead>
  <tbody
    class="pf-v5-c-table__tbody"
    data-ouia-component-id="SkeletonTable-tbody"
    role="rowgroup"
  >
    <tr
      class="pf-v5-c-table__tr"
      data-ouia-component-id="SkeletonTable-tr-0"
      data-ouia-component-type="PF5/TableRow"
      data-ouia-safe="true"
    >
      <td
        class="pf-v5-c-table__td"
        data-ouia-component-id="SkeletonTable-td-0-0"
        tabindex="-1"
      >
        <div
          class="pf-v5-c-skeleton"
        >
          <span
            class="pf-v5-screen-reader"
          />
        </div>
      </td>
      <td
        class="pf-v5-c-table__td"
        data-ouia-component-id="SkeletonTable-td-0-1"
        tabindex="-1"
      >
        <div
          class="pf-v5-c-skeleton"
        >
          <span
            class="pf-v5-screen-reader"
          />
        </div>
      </td>
      <td
        class="pf-v5-c-table__td"
        data-ouia-component-id="SkeletonTable-td-0-2"
        tabindex="-1"
      >
        <div
          class="pf-v5-c-skeleton"
        >
          <span
            class="pf-v5-screen-reader"
          />
        </div>
      </td>
      <td
        class="pf-v5-c-table__td"
        data-ouia-component-id="SkeletonTable-td-0-3"
        tabindex="-1"
      >
        <div
          class="pf-v5-c-skeleton"
        >
          <span
            class="pf-v5-screen-reader"
          />
        </div>
      </td>
      <td
        class="pf-v5-c-table__td"
        data-ouia-component-id="SkeletonTable-td-0-4"
        tabindex="-1"
      >
        <div
          class="pf-v5-c-skeleton"
        >
          <span
            class="pf-v5-screen-reader"
          />
        </div>
      </td>
    </tr>
    <tr
      class="pf-v5-c-table__tr"
      data-ouia-component-id="SkeletonTable-tr-1"
      data-ouia-component-type="PF5/TableRow"
      data-ouia-safe="true"
    >
      <td
        class="pf-v5-c-table__td"
        data-ouia-component-id="SkeletonTable-td-1-0"
        tabindex="-1"
      >
        <div
          class="pf-v5-c-skeleton"
        >
          <span
            class="pf-v5-screen-reader"
          />
        </div>
      </td>
      <td
        class="pf-v5-c-table__td"
        data-ouia-component-id="SkeletonTable-td-1-1"
        tabindex="-1"
      >
        <div
          class="pf-v5-c-skeleton"
        >
          <span
            class="pf-v5-screen-reader"
          />
        </div>
      </td>
      <td
        class="pf-v5-c-table__td"
        data-ouia-component-id="SkeletonTable-td-1-2"
        tabindex="-1"
      >
        <div
          class="pf-v5-c-skeleton"
        >
          <span
            class="pf-v5-screen-reader"
          />
        </div>
      </td>
      <td
        class="pf-v5-c-table__td"
        data-ouia-component-id="SkeletonTable-td-1-3"
        tabindex="-1"
      >
        <div
          class="pf-v5-c-skeleton"
        >
          <span
            class="pf-v5-screen-reader"
          />
        </div>
      </td>
      <td
        class="pf-v5-c-table__td"
        data-ouia-component-id="SkeletonTable-td-1-4"
        tabindex="-1"
      >
        <div
          class="pf-v5-c-skeleton"
        >
          <span
            class="pf-v5-screen-reader"
          />
        </div>
      </td>
    </tr>
    <tr
      class="pf-v5-c-table__tr"
      data-ouia-component-id="SkeletonTable-tr-2"
      data-ouia-component-type="PF5/TableRow"
      data-ouia-safe="true"
    >
      <td
        class="pf-v5-c-table__td"
        data-ouia-component-id="SkeletonTable-td-2-0"
        tabindex="-1"
      >
        <div
          class="pf-v5-c-skeleton"
        >
          <span
            class="pf-v5-screen-reader"
          />
        </div>
      </td>
      <td
        class="pf-v5-c-table__td"
        data-ouia-component-id="SkeletonTable-td-2-1"
        tabindex="-1"
      >
        <div
          class="pf-v5-c-skeleton"
        >
          <span
            class="pf-v5-screen-reader"
          />
        </div>
      </td>
      <td
        class="pf-v5-c-table__td"
        data-ouia-component-id="SkeletonTable-td-2-2"
        tabindex="-1"
      >
        <div
          class="pf-v5-c-skeleton"
        >
          <span
            class="pf-v5-screen-reader"
          />
        </div>
      </td>
      <td
        class="pf-v5-c-table__td"
        data-ouia-component-id="SkeletonTable-td-2-3"
        tabindex="-1"
      >
        <div
          class="pf-v5-c-skeleton"
        >
          <span
            class="pf-v5-screen-reader"
          />
        </div>
      </td>
      <td
        class="pf-v5-c-table__td"
        data-ouia-component-id="SkeletonTable-td-2-4"
        tabindex="-1"
      >
        <div
          class="pf-v5-c-skeleton"
        >
          <span
            class="pf-v5-screen-reader"
          />
        </div>
      </td>
    </tr>
    <tr
      class="pf-v5-c-table__tr"
      data-ouia-component-id="SkeletonTable-tr-3"
      data-ouia-component-type="PF5/TableRow"
      data-ouia-safe="true"
    >
      <td
        class="pf-v5-c-table__td"
        data-ouia-component-id="SkeletonTable-td-3-0"
        tabindex="-1"
      >
        <div
          class="pf-v5-c-skeleton"
        >
          <span
            class="pf-v5-screen-reader"
          />
        </div>
      </td>
      <td
        class="pf-v5-c-table__td"
        data-ouia-component-id="SkeletonTable-td-3-1"
        tabindex="-1"
      >
        <div
          class="pf-v5-c-skeleton"
        >
          <span
            class="pf-v5-screen-reader"
          />
        </div>
      </td>
      <td
        class="pf-v5-c-table__td"
        data-ouia-component-id="SkeletonTable-td-3-2"
        tabindex="-1"
      >
        <div
          class="pf-v5-c-skeleton"
        >
          <span
            class="pf-v5-screen-reader"
          />
        </div>
      </td>
      <td
        class="pf-v5-c-table__td"
        data-ouia-component-id="SkeletonTable-td-3-3"
        tabindex="-1"
      >
        <div
          class="pf-v5-c-skeleton"
        >
          <span
            class="pf-v5-screen-reader"
          />
        </div>
      </td>
      <td
        class="pf-v5-c-table__td"
        data-ouia-component-id="SkeletonTable-td-3-4"
        tabindex="-1"
      >
        <div
          class="pf-v5-c-skeleton"
        >
          <span
            class="pf-v5-screen-reader"
          />
        </div>
      </td>
    </tr>
    <tr
      class="pf-v5-c-table__tr"
      data-ouia-component-id="SkeletonTable-tr-4"
      data-ouia-component-type="PF5/TableRow"
      data-ouia-safe="true"
    >
      <td
        class="pf-v5-c-table__td"
        data-ouia-component-id="SkeletonTable-td-4-0"
        tabindex="-1"
      >
        <div
          class="pf-v5-c-skeleton"
        >
          <span
            class="pf-v5-screen-reader"
          />
        </div>
      </td>
      <td
        class="pf-v5-c-table__td"
        data-ouia-component-id="SkeletonTable-td-4-1"
        tabindex="-1"
      >
        <div
          class="pf-v5-c-skeleton"
        >
          <span
            class="pf-v5-screen-reader"
          />
        </div>
      </td>
      <td
        class="pf-v5-c-table__td"
        data-ouia-component-id="SkeletonTable-td-4-2"
        tabindex="-1"
      >
        <div
          class="pf-v5-c-skeleton"
        >
          <span
            class="pf-v5-screen-reader"
          />
        </div>
      </td>
      <td
        class="pf-v5-c-table__td"
        data-ouia-component-id="SkeletonTable-td-4-3"
        tabindex="-1"
      >
        <div
          class="pf-v5-c-skeleton"
        >
          <span
            class="pf-v5-screen-reader"
          />
        </div>
      </td>
      <td
        class="pf-v5-c-table__td"
        data-ouia-component-id="SkeletonTable-td-4-4"
        tabindex="-1"
      >
        <div
          class="pf-v5-c-skeleton"
        >
          <span
            class="pf-v5-screen-reader"
          />
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`<Roles /> should render correctly in org admin 1`] = `null`;
